# LamasFinance

./: Cargo.toml  README.md  copy-output.js  package-lock.json  package.json  readme.md  test-jup
client/: jackpot.ts  lucky-spinner.ts  price-predict.ts  provider.ts  up-or-down.ts
idl/: jackpot_lottery.ts  lucky_spinner.ts  price_predict.ts  up_or_down.ts
programs/jackpot-lottery/: Cargo.toml
programs/jackpot-lottery/src/: account.rs  error.rs  lib.rs  random.rs  state.rs
programs/lucky-spinner/: Cargo.toml
programs/lucky-spinner/src/: lib.rs
programs/price-predict/: Cargo.toml
programs/price-predict/src/: account.rs  error.rs  lib.rs  state.rs
programs/up-or-down/: Cargo.toml
programs/up-or-down/src/: account.rs  decimal.rs  error.rs  lib.rs  state.rs
