[package]
name = "up-or-down"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "up_or_down"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
timing-error = []

[dependencies]
anchor-lang = "0.25"
anchor-spl = "0.25"
chainlink_solana = "1.0.0"
